# cookie-composer

./: .buildinfo  .changelog-config.yaml  .cookiecutter.json  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  api.html  changelog.html  cli.html  contributing.html  genindex.html  index.html  installation.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/changelog_templates/: version_heading.md.jinja
.github/workflows/: bumpversion.yaml  codeql-analysis.yml  publish-docs.yaml  publish-package.yaml  test.yaml
_autosummary/: cookie_composer.authentication.html  cookie_composer.cc_overrides.html  cookie_composer.commands.html  cookie_composer.composition.html  cookie_composer.data_merge.html  cookie_composer.diff.html  cookie_composer.exceptions.html  cookie_composer.git_commands.html  cookie_composer.layers.html  cookie_composer.matching.html  cookie_composer.merge_files.html  cookie_composer.utils.html
_autosummary/authentication/: cookie_composer.authentication.add_auth_to_url.html  cookie_composer.authentication.get_cached_token.html  cookie_composer.authentication.get_hosts_file.html  cookie_composer.authentication.github_auth_device.html  cookie_composer.authentication.login_to_svc.html
_autosummary/cc_overrides/: cookie_composer.cc_overrides.CustomStrictEnvironment.html  cookie_composer.cc_overrides.JsonifyContextExtension.html  cookie_composer.cc_overrides.jsonify_context.html  cookie_composer.cc_overrides.prompt_for_config.html  cookie_composer.cc_overrides.update_extensions.html
_autosummary/commands/: cookie_composer.commands.add.html  cookie_composer.commands.authn.html  cookie_composer.commands.create.html  cookie_composer.commands.link.html  cookie_composer.commands.update.html
_autosummary/composition/: cookie_composer.composition.Composition.html  cookie_composer.composition.LayerConfig.html  cookie_composer.composition.RenderedComposition.html  cookie_composer.composition.RenderedLayer.html  cookie_composer.composition.get_composition_from_path_or_url.html  cookie_composer.composition.get_merge_strategy.html  cookie_composer.composition.is_composition_file.html  cookie_composer.composition.read_composition.html  cookie_composer.composition.read_rendered_composition.html  cookie_composer.composition.write_composition.html  cookie_composer.composition.write_rendered_composition.html
_autosummary/data_merge/: cookie_composer.data_merge.Context.html  cookie_composer.data_merge.comprehensive_merge.html  cookie_composer.data_merge.deep_merge.html  cookie_composer.data_merge.freeze_data.html  cookie_composer.data_merge.merge_iterables.html
_autosummary/diff/: cookie_composer.diff.display_diff.html  cookie_composer.diff.get_diff.html  cookie_composer.diff.replace_diff_prefixes.html
_autosummary/exceptions/: cookie_composer.exceptions.ChangesetUnicodeError.html  cookie_composer.exceptions.GitError.html  cookie_composer.exceptions.MergeError.html  cookie_composer.exceptions.MissingCompositionFileError.html
_autosummary/git_commands/: cookie_composer.git_commands.apply_patch.html  cookie_composer.git_commands.branch_exists.html  cookie_composer.git_commands.branch_from_first_commit.html  cookie_composer.git_commands.checkout_branch.html  cookie_composer.git_commands.get_latest_template_commit.html  cookie_composer.git_commands.get_repo.html  cookie_composer.git_commands.remote_branch_exists.html
_autosummary/layers/: cookie_composer.layers.WriteStrategy.html  cookie_composer.layers.get_accept_hooks_per_layer.html  cookie_composer.layers.get_layer_context.html  cookie_composer.layers.get_write_strategy.html  cookie_composer.layers.merge_layers.html  cookie_composer.layers.render_layer.html  cookie_composer.layers.render_layers.html
_autosummary/matching/: cookie_composer.matching.matches_any_glob.html  cookie_composer.matching.rel_fnmatch.html
_autosummary/merge_files/: cookie_composer.merge_files.ini_file.html  cookie_composer.merge_files.json_file.html  cookie_composer.merge_files.toml_file.html  cookie_composer.merge_files.yaml_file.html
_autosummary/utils/: cookie_composer.utils.echo.html  cookie_composer.utils.get_context_for_layer.html  cookie_composer.utils.get_deleted_files.html  cookie_composer.utils.get_template_name.html  cookie_composer.utils.remove_paths.html  cookie_composer.utils.remove_readonly_bit.html  cookie_composer.utils.remove_single_path.html
_includes/: tutorial-composition-3.yaml
_modules/: index.html
_modules/cookie_composer/: authentication.html  cc_overrides.html  composition.html  data_merge.html  diff.html  exceptions.html  git_commands.html  layers.html  matching.html  utils.html
_sources/: api.rst.txt  index.md.txt
_sources/_autosummary/: cookie_composer.authentication.rst.txt  cookie_composer.cc_overrides.rst.txt  cookie_composer.commands.rst.txt  cookie_composer.composition.rst.txt  (+8 more)
cookie_composer/: __init__.py  authentication.py  cc_overrides.py  cli.py  composition.py  data_merge.py  diff.py  exceptions.py  git_commands.py  io.py  layers.py  matching.py  utils.py
docs/: index.md  installation.md
docsrc/: Makefile  api.rst  cli.rst  composition-files.md  conf.py  index.md  make.bat  usage.rst
how-to/: access-private-templates.html  index.html
requirements/: Makefile  cookiecutter.in  cookiecutter.txt  dev.in  dev.txt  docs.in  docs.txt  prod.in  prod.txt  test.in  test.txt
search/: search_index.json
tests/: conftest.py  test_authentication.py  test_cc_overrides.py  test_cli.py  test_composition.py  test_diff.py  test_git_commands.py  test_io.py  test_layers.py  test_merge_files_helpers.py  test_merge_files_ini_file.py  test_merge_files_json_file.py  test_merge_files_toml_file.py  test_merge_files_yaml_file.py  test_utils.py
tools/: gen-codeowners.sh
topic-guides/: composition-files.html  index.html
tutorial/: composable-templates.html  compositions.html  incrementally-layering.html  index.html
(+369 files in other folders)
