[metadata]
name = cookie_composer
version = 0.1.0
description = Create new projects from a composition of several templates
url = https://github.com/coordt/cookie-composer
author = Corey Oordt
author_email = coreyoordt@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.9
long_description = file:README.md
long_description_content_type="text/markdown"
keywords = cookie_composer

[options]
zip_safe=False
include_package_data=True

[options.entry_points]
console_scripts =
    cookie-composer = cookie_composer.cli:app

[options.packages.find]
exclude =
    example*
    tests*
    docs
    build
include = cookie_composer*

[flake8]
ignore = D203,W503
exclude =
    .git,
    .tox,
    docs,
    build,
    dist
max-line-length = 119

[darglint]
ignore=DAR402

[bumpversion]
current_version = 0.1.0
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+\w+-(?P<dev>\d+))?
serialize =
	{major}.{minor}.{patch}+{$USER}-{dev}
	{major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[bumpversion:part:dev]

[bumpversion:file:setup.cfg]

[bumpversion:file:cookie_composer/__init__.py]

[bumpversion:file:CHANGELOG.md]
search = Unreleased
