[metadata]
name = cookie_composer
version = attr:cookie_composer.__version__
description = Create new projects from a composition of several templates
url = https://github.com/coordt/cookie-composer
author = Corey Oordt
author_email = coreyoordt@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
long_description = file:README.md
long_description_content_type = "text/markdown"
keywords = cookie_composer cookiecutter

[options]
zip_safe=False
include_package_data=True
packages = find:

[options.entry_points]
console_scripts =
    cookie-composer = cookie_composer.cli:cli

[options.packages.find]
exclude =
    example*
    tests*
    docs
    build

[flake8]
ignore = D203,W503
exclude =
    .git,
    .tox,
    docs,
    build,
    dist
max-line-length = 119

[darglint]
ignore=DAR402

[bumpversion]
current_version = 0.1.0
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+\w+-(?P<dev>\d+))?
serialize =
	{major}.{minor}.{patch}+{$USER}-{dev}
	{major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[bumpversion:part:dev]

[bumpversion:file:setup.cfg]

[bumpversion:file:cookie_composer/__init__.py]

[bumpversion:file:CHANGELOG.md]
search = Unreleased
