[bumpversion]
current_version = 0.8.1
commit = True
commit_args = --no-verify
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+\w+-(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}+{$BRANCH_NAME}-{dev}
	{major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[metadata]
name = cookie_composer
version = attr:cookie_composer.__version__
description = Create new projects from a composition of several templates
url = https://github.com/coordt/cookie-composer
author = Corey Oordt
author_email = coreyoordt@gmail.com
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	Natural Language :: English
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Software Development
long_description = file:README.md
long_description_content_type = text/markdown
keywords = cookie_composer cookiecutter

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts = 
	cookie-composer = cookie_composer.cli:cli

[options.packages.find]
exclude = 
	example*
	tests*
	docs
	build

[flake8]
ignore = D203,W503
exclude = 
	.git,
	.tox,
	docs,
	build,
	dist
max-line-length = 119

[darglint]
ignore = DAR402

[bumpversion:part:dev]

[bumpversion:file:cookie_composer/__init__.py]

[bumpversion:file(version heading):CHANGELOG.md]
search = Unreleased

[bumpversion:file(diff link):CHANGELOG.md]
search = {current_version}...HEAD
replace = {current_version}...{new_version}
